--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,13 @@ include_directories(${VOTCA_TOOLS_INCLUDE_DIRS})
 find_package(VOTCA_CSG REQUIRED)
 include_directories(${VOTCA_CSG_INCLUDE_DIRS})
 
-file(GLOB_RECURSE DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} */CMakeLists.txt)
-foreach(DIR ${DIRS})
+file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} */*.cc)
+foreach(DIR ${FILES})
   string(REGEX MATCH ^[^/]* DIR ${DIR})
+  list(APPEND DIRS ${DIR})
+endforeach(DIR)
+list(REMOVE_DUPLICATES DIRS)
+foreach(DIR ${DIRS})
   file(GLOB SRC ${DIR}/*.cc)
   add_executable(${DIR} ${SRC})
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR}) #needed for out-of-source build
